--- a/galeri.html
+++ b/galeri.html
@@ -83,41 +83,28 @@
               <div class="satu">
                 <div class="row">
                     <div class="col-lg-6 mb-4">
-                        <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="assets/img/wayang/wayang 1.png" class="d-block w-100" alt="Gambar 1">
-                                </div>
-                                <!-- Add more carousel items for additional images -->
-                            </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
-                        </div>
+                      <div class="main-image" onclick="openFullscreen('assets/img/wayang/wayang 1.png')">
+                        <img src="assets/img/wayang/wayang 1.png" alt="Gambar 1" style="width: 100%" />
+                      </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="row">
                             <div class="col-md-6 mb-4">
-                                <div class="sub-image">
+                                <div class="sub-image" onclick="openFullscreen('assets/img/wayang/wayang 1.png')">
                                     <img src="assets/img/gallery/wayang 3.png" class="d-block w-100" alt="Gambar 2">
                                 </div>
                             </div>
                             <div class="col-md-6 mb-4">
-                                <div class="sub-image">
+                                <div class="sub-image" onclick="openFullscreen('assets/img/wayang/wayang 1.png')">
                                     <img src="assets/img/gallery/wayang 2.png" class="d-block w-100" alt="Gambar 3">
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6" onclick="openFullscreen('assets/img/wayang/wayang 1.png')">
                                 <div class="sub-image">
                                     <img src="assets/img/gallery/wayang 2.png" class="d-block w-100" alt="Gambar 4">
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-6" onclick="openFullscreen('assets/img/wayang/wayang 1.png')">
                                 <div class="sub-image">
                                     <img src="assets/img/gallery/wayang 3.png" class="d-block w-100" alt="Gambar 5">
                                 </div>
@@ -130,42 +117,29 @@
                 <div class="dua">
                 <div class="row">
                   <div class="col-lg-6 mb-4">
-                      <div id="mainCarousel" class="carousel slide" data-bs-ride="carousel">
-                          <div class="carousel-inner">
-                              <div class="carousel-item active">
-                                  <img src="assets/img/wayang/wayang 1.png" class="d-block w-100" alt="Gambar 1">
-                              </div>
-                              <!-- Add more carousel items for additional images -->
-                          </div>
-                          <button class="carousel-control-prev" type="button" data-bs-target="#mainCarousel" data-bs-slide="prev">
-                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Previous</span>
-                          </button>
-                          <button class="carousel-control-next" type="button" data-bs-target="#mainCarousel" data-bs-slide="next">
-                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Next</span>
-                          </button>
-                      </div>
+                    <div class="main-image" onclick="openFullscreen('assets/img/wayang/wayang 1.png')">
+                      <img src="assets/img/wayang/wayang 1.png" alt="Gambar 1" style="width: 100%" />
+                    </div>
                   </div>
                   <div class="col-lg-6">
                       <div class="row">
                           <div class="col-md-6 mb-4">
-                              <div class="sub-image">
+                              <div class="sub-image" onclick="openFullscreen('assets/img/wayang/wayang 1.png')">
                                   <img src="assets/img/gallery/wayang 3.png" class="d-block w-100" alt="Gambar 2">
                               </div>
                           </div>
                           <div class="col-md-6 mb-4">
-                              <div class="sub-image">
+                              <div class="sub-image" onclick="openFullscreen('assets/img/wayang/wayang 1.png')">
                                   <img src="assets/img/gallery/wayang 2.png" class="d-block w-100" alt="Gambar 3">
                               </div>
                           </div>
                           <div class="col-md-6">
-                              <div class="sub-image">
+                              <div class="sub-image" onclick="openFullscreen('assets/img/wayang/wayang 1.png')">
                                   <img src="assets/img/gallery/wayang 2.png" class="d-block w-100" alt="Gambar 4">
                               </div>
                           </div>
                           <div class="col-md-6">
-                              <div class="sub-image">
+                              <div class="sub-image" onclick="openFullscreen('assets/img/wayang/wayang 1.png')">
                                   <img src="assets/img/gallery/wayang 3.png" class="d-block w-100" alt="Gambar 5">
                               </div>
                           </div>
@@ -174,6 +148,29 @@
               </div>
             </div>
 
+            </div>
+
+            <!-- Tampilan fullscreen -->
+            <div class="fullscreen" id="fullscreen">
+              <span class="close" onclick="closeFullscreen()">&times;</span>
+              <div class="card mb-3" style="max-width: 540px">
+                <div style="justify-content: flex-end;"><a href="galeri.html"><button type="button" class="btn-close" aria-label="Close"></button></a></div>
+                <div class="row g-0">
+                  <h3 style="text-align:center">DETAIL WAYANG KULIT - NAMA WAYANG KULIT</h3>
+                  <div class="col-md-4">
+                    <img src="" class="img-fluid rounded-start" id="fullscreen-img" alt="Gambar" />
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Nama Wayang</h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content LOREM LOREM LOREM</p>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content LOREM LOREM LOREM</p>
+                      <p class="card-text">Asal Wayang : Lorem Lorem</p>
+                      <!-- <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
         </section>
     </main>
@@ -334,34 +331,22 @@
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightgallery/1.10.0/js/lightgallery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lg-zoom/1.0.1/lg-zoom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lg-fullscreen/1.0.1/lg-fullscreen.min.js"></script>
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
     <script>
-    document.addEventListener('DOMContentLoaded', function () {
-        var mainCarousel = new bootstrap.Carousel(document.getElementById('mainCarousel'), {
-            interval: false,
-            wrap: false
-        });
+      // Fungsi untuk membuka tampilan fullscreen
+      function openFullscreen(imageSrc) {
+        var fullscreenImg = document.getElementById("fullscreen-img");
+        fullscreenImg.src = imageSrc;
+        document.getElementById("fullscreen").style.display = "flex";
+      }
 
-        var subImages = document.querySelectorAll('.sub-image');
-        subImages.forEach(function (subImage) {
-            subImage.addEventListener('click', function () {
-                var index = Array.from(subImage.parentNode.children).indexOf(subImage);
-                mainCarousel.to(index);
-            });
-        });
-
-        var mainImage = document.getElementById('mainCarousel');
-        lightGallery(mainImage, {
-            selector: 'img',
-            download: false,
-            zoom: true,
-            fullScreen: true,
-            actualSize: true
-        });
-    });
+      // Fungsi untuk menutup tampilan fullscreen
+      function closeFullscreen() {
+        document.getElementById("fullscreen").style.display = "none";
+      }
     </script>
 
     <!-- Template Main JS File -->
